--- a/style.css
+++ b/style.css
@@ -13,6 +13,29 @@ body {
   color: #444;
 }
 
+.btn {
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: rgba(94, 209, 238, 0.801);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: background-color 100ms;
+  cursor: pointer;
+  user-select: none;
+  margin-top: 15px;
+}
+
+.btn:hover {
+  background-color: rgba(71, 161, 184, 0.801);
+}
+
+.btn:active {
+  position: relative;
+  top: 2px;
+  box-shadow: none;
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25); */
+}
+
 .box {
   background-color: white;
   border-radius: 10px;
@@ -30,8 +53,9 @@ body {
 }
 
 main {
-  width: 90vw;
-  height: 85vh;
+  min-width: 90vw;
+  min-height: 85vh;
+  /* flex-wrap: wrap; */
 }
 
 .tab {
@@ -67,12 +91,14 @@ main {
   align-items: center;
   border-bottom: 1px solid #bbb;
   padding: 0 10px 5px;
+  margin: 0 70px;
 }
 
 .content {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
+  padding: 20px;
 }
 
 .small-title {
